--- a/.htaccess
+++ b/.htaccess
@@ -13,4 +13,6 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /smartthingsolutions/index.php [L]
 </IfModule>
 
+php_value max_execution_time 300
+
 # END WordPress
